// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUserButton renders as disabled with explanatory tooltip when the selected user name is not in the list of possibilities 1`] = `
<div>
  <div
    class=""
    title="Please enter a registered user's email."
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined addButton MuiButton-outlinedPrimary Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Add
      </span>
    </button>
  </div>
</div>
`;

exports[`AddUserButton when selected user is the current user renders as disabled with explanatory tooltip when the current user is not system admin 1`] = `
<div>
  <div
    class=""
    title="You can not add permissions for yourself."
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined addButton MuiButton-outlinedPrimary Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Add
      </span>
    </button>
  </div>
</div>
`;

exports[`AddUserButton when selected user is the current user renders as not disabled when the current user is system admin 1`] = `
<div>
  <div
    class=""
    title=""
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined addButton MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Add
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`AddUserButton when the selected user is not the current user renders as not disabled when the selected user name is in the list of possibilities 1`] = `
<div>
  <div
    class=""
    title=""
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined addButton MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Add
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`AddUserPermissions renders pure component with correct props 1`] = `
<div>
  <div
    class="AddUserPermission-addUserPermission-1"
  >
    <div>
      UserSelect mock 
      {"className":"AddUserPermission-usersAutofill-5","selectedUsers":null,"label":"Add User","placeholder":"Type user's email..."}
    </div>
    <div
      class="MuiFormControl-root MuiTextField-root AddUserPermission-permissionsSelector-4 MuiFormControl-marginDense"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-marginDense MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink="true"
      >
        Permissions
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          role="button"
          tabindex="0"
        >
          Viewer
        </div>
        <input
          type="hidden"
          value="Viewer"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-88 MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="PrivateNotchedOutline-legendLabelled-90 PrivateNotchedOutline-legendNotched-91"
          >
            <span>
              Permissions
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class=""
      title="Please enter a registered user's email."
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined AddUserPermission-addButton-6 MuiButton-outlinedPrimary Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PermissionsSelector renders to match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root permissionsSelector MuiFormControl-marginDense"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-marginDense MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink="true"
    >
      Permissions
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
    >
      <div
        aria-haspopup="listbox"
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
        role="button"
        tabindex="0"
      >
        Viewer
      </div>
      <input
        type="hidden"
        value="Viewer"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-354 MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="PrivateNotchedOutline-legendLabelled-356 PrivateNotchedOutline-legendNotched-357"
        >
          <span>
            Permissions
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`PureAddUserPermission renders to match snapshot 1`] = `
<div>
  <div
    class="addUserPermission"
  >
    <div>
      UserSelect mock 
      {"className":"usersAutofill","selectedUsers":{"name":"Test User One","userId":"test-user-one"},"label":"Add User","placeholder":"Type user's email..."}
    </div>
    <div
      class="MuiFormControl-root MuiTextField-root permissionsSelector MuiFormControl-marginDense"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-marginDense MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink="true"
      >
        Permissions
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          role="button"
          tabindex="0"
        >
          Viewer
        </div>
        <input
          type="hidden"
          value="Viewer"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-216 MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="PrivateNotchedOutline-legendLabelled-218 PrivateNotchedOutline-legendNotched-219"
          >
            <span>
              Permissions
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class=""
      title=""
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined addButton MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
